[gd_scene load_steps=6 format=3 uid="uid://bhp712q20vgvb"]

[ext_resource type="Script" path="res://scripts/menu/levelSelect/LevelSelectUI.gd" id="1_rrfbg"]
[ext_resource type="Texture2D" uid="uid://cj3igdotfum8" path="res://sourceArt/Bg/Game/Bg.png" id="2_r2dk1"]
[ext_resource type="Texture2D" uid="uid://b4tlhj27xqekg" path="res://sourceArt/Icons/arrowLeft.png" id="3_b6hi4"]
[ext_resource type="Theme" uid="uid://dcn0qri7xl5ii" path="res://themes/gameui_theme.tres" id="3_x2i6y"]
[ext_resource type="FontFile" uid="uid://h7k15drun7xd" path="res://resource/fonts/architect-s-daughter/ArchitectsDaughter.ttf" id="4_mq3ic"]

[node name="LevelSelectUI" type="Panel"]
unique_name_in_owner = true
self_modulate = Color(0.258824, 0.227451, 0.227451, 0.545098)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_rrfbg")

[node name="Bg" type="TextureRect" parent="."]
self_modulate = Color(0.772549, 0.772549, 0.772549, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_r2dk1")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="LevelSelectHolder" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
alignment = 1

[node name="BuffHolder" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
alignment = 1

[node name="ReadyButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.0
offset_top = 282.0
offset_right = 71.0
offset_bottom = 332.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_x2i6y")
theme_override_font_sizes/font_size = 25
text = "Ready"

[node name="InfoPanel" type="Panel" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 150)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="InfoLabel" type="RichTextLabel" parent="InfoPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center]Hello hbkbkjbbjk

bhbkbkjbb

 mkbkjb[/center]"
fit_content = true

[node name="BackButton" type="TextureButton" parent="."]
unique_name_in_owner = true
self_modulate = Color(1, 0.596078, 0.0705882, 1)
layout_mode = 0
offset_top = 60.0
offset_right = 100.0
offset_bottom = 160.0
texture_normal = ExtResource("3_b6hi4")
texture_pressed = ExtResource("3_b6hi4")
texture_hover = ExtResource("3_b6hi4")
texture_disabled = ExtResource("3_b6hi4")
texture_focused = ExtResource("3_b6hi4")

[node name="TitleLabel" type="Label" parent="."]
unique_name_in_owner = true
modulate = Color(0.980392, 0.568627, 1, 1)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.67451, 0.305882, 0.203922, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("4_mq3ic")
theme_override_font_sizes/font_size = 55
text = "Level Select"
